# camera_calibrate_ceres

./: CMakeLists.txt  README.md  make17.bat
data/: camera.raw  image_points.raw  obj_points.raw  residual.csv
example/: CMakeLists.txt  example.cpp
